--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,19 @@
   <title>21 Savage Fans</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <h2>Ever wanted to be in the pocket of 21 Savage? Add a message to the queue below and you just might get a chance</h2>
+  <h2>Add a message</h2>
 
+  <form action="/messages" method="POST">
+    <input type="text" placeholder="Name" name="name">
+    <input type="text" placeholder="Message" name="msg">
+    <button type="submit">Submit</button>
+  </form>
 
   <h3>Messages</h3>
   <ul class="messages">
@@ -26,13 +33,7 @@
   <% } %>
   </ul>
 
-  <h2>Add a message</h2>
-
-  <form action="/messages" method="POST">
-    <input type="text" placeholder="name" name="name">
-    <input type="text" placeholder="message" name="msg">
-    <button type="submit">Submit</button>
-  </form>
+ 
 
   <script src="main.js"></script>
 
